# terminalgui

./: CMakeLists.txt  README.md  annotated.html  classTg_1_1BorderStyle-members.html  classTg_1_1BorderStyle.html  classTg_1_1BorderStyle__coll__graph.map  classTg_1_1BorderStyle__coll__graph.md5  classTg_1_1BorderStyle__inherit__graph.map  classTg_1_1BorderStyle__inherit__graph.md5  classTg_1_1Button-members.html  classTg_1_1Button.html  classTg_1_1Button__coll__graph.map  classTg_1_1Button__coll__graph.md5  classTg_1_1Button__inherit__graph.map  classTg_1_1Button__inherit__graph.md5  classTg_1_1CheckBox-members.html  classTg_1_1CheckBox.html  classTg_1_1CheckBox__coll__graph.map  classTg_1_1CheckBox__inherit__graph.md5  classTg_1_1CheckableStringListModel-members.html  classTg_1_1CheckableStringListModel.html  classTg_1_1CheckableStringListModel__coll__graph.map  classTg_1_1CheckableStringListModel__coll__graph.md5  classTg_1_1ChildFillsParentLayout-members.html  classTg_1_1ChildFillsParentLayout.html  classTg_1_1ChildFillsParentLayout__coll__graph.map  classTg_1_1ChildFillsParentLayout__coll__graph.md5  classTg_1_1ChildFillsParentLayout__inherit__graph.map  classTg_1_1ChildFillsParentLayout__inherit__graph.md5  classTg_1_1Color-members.html  classTg_1_1Color.html  classTg_1_1ColumnLayout-members.html  classTg_1_1ColumnLayout.html  classTg_1_1ColumnLayout__coll__graph.map  classTg_1_1ColumnLayout__coll__graph.md5  classTg_1_1ColumnLayout__inherit__graph.map  classTg_1_1ColumnLayout__inherit__graph.md5  classTg_1_1ExclusiveGroup-members.html  classTg_1_1ExclusiveGroup.html  classTg_1_1ExclusiveGroup__coll__graph.md5  (+178 more)
backend/: CMakeLists.txt  backend.cpp  backend.h  backend_linux.cpp  backend_windows.cpp  tgcommand.h  tgterminal_linux.cpp
core/: CMakeLists.txt  tgcolor.cpp  tgcolor.h  tgcommand.cpp  tgcommand.h  tgkey.h  tgterminal.cpp  tgterminal.h  tgterminal_linux.cpp  tgterminal_windows.cpp
doc/: developer_guide.md
doc/img/: terminal-gui-2.webm
examples/: CMakeLists.txt  animation-example.cpp  colors-example.cpp  item-views-example.cpp  layouts-example.cpp  main.cpp  mouse-tracking-example.cpp  showcase-example.cpp  terminalgui-example.cpp  widgets-example.cpp
examples/raspi-config-example/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
examples/raspi-config-example/menu/: actions.cpp  actions.h  item.cpp  item.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  (+69 more)
widgets/: CMakeLists.txt  reversibleanimation.cpp  textstream.cpp  textstream.h  tgborderstyle.h  tgbutton.cpp  tgbutton.h  tgchildfillsparentlayout.cpp  tgchildfillsparentlayout.h  tgcolumnlayout.cpp  tggridlayout.cpp  tghelpers.h  tglabel.cpp  tglabel.h  tglayout.cpp  tglayout.h  tglineedit.cpp  tglineedit.h  tgrowlayout.cpp  tgscreen.cpp  tgscreen.h  tgstyle.cpp  tgstyle.h  tgtableborderstyle.h  tgwidget.cpp  tgwidget.h
widgets/layouts/: tgchildfillsparentlayout.cpp  tgchildfillsparentlayout.h  tgcolumnlayout.cpp  tgcolumnlayout.h  tggridlayout.cpp  tggridlayout.h  tglayout.cpp  tglayout.h  tgrowlayout.cpp  tgrowlayout.h
widgets/menus/: actionmenuitem.cpp  actionmenuitem.h  listmenuitem.cpp  listmenuitem.h  menuitem.cpp  menuitem.h
widgets/models/: tgcheckablestringlistmodel.cpp  tgcheckablestringlistmodel.h
widgets/styles/: tgborderstyle.h  tgstyle.cpp  tgstyle.h  tgtableborderstyle.h
widgets/utils/: tghelpers.cpp  tghelpers.h  tgreversibleanimation.cpp  tgreversibleanimation.h  tgtext.h  tgtextstream.cpp
widgets/widgets/: tgbutton.cpp  tgbutton.h  tgcheckbox.cpp  tgcheckbox.h  tglabel.cpp  tglabel.h  tglineedit.cpp  tglineedit.h  tglistview.cpp  tglistview.h  tgpopup.cpp  tgpopup.h  tgradiobutton.cpp  tgradiobutton.h  tgscrollarea.cpp  tgscrollarea.h  tgscrollbar.cpp  tgscrollbar.h  tgwidget.cpp  tgwidget.h
